--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.61"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,10 +29,11 @@ allprojects {
 
     //NOTE: This is important
     rootProject.ext {
-        BuildTools = "27"
+        BuildTools = "27.0.3"
         MinSdk = 15
         TargetSdk = 26
         CompileSdk = 26
+        SupportLibrary = "27.0.1"
     }
 }
 
